# backend/internal/api/api/openapi.yaml
@@ -19,9 +19,10 @@ paths:
         name: month
         required: true
         schema:
-          example: 2024-12-01
-          format: date
-          type: string
+          example: 0
+          maximum: 11
+          minimum: 0
+          type: integer
       requestBody:
         content:
           application/json:
@@ -50,19 +51,20 @@ paths:
       parameters:
       - description: The id of the income line
         in: path
+        name: month
+        required: true
+        schema:
+          example: 0
+          maximum: 11
+          minimum: 0
+          type: integer
+      - description: The id of the income line
+        in: path
         name: incomeId
         required: true
         schema:
           example: 53240c09-79c3-4601-a625-10b4e0715a8d
           format: guid
-          type: string
-      - description: The id of the income line
-        in: path
-        name: month
-        required: true
-        schema:
-          example: 2024-12-01
-          format: date
           type: string
       responses:
         "200":
@@ -84,19 +86,20 @@ paths:
       parameters:
       - description: The id of the income line
         in: path
+        name: month
+        required: true
+        schema:
+          example: 0
+          maximum: 11
+          minimum: 0
+          type: integer
+      - description: The id of the income line
+        in: path
         name: incomeId
         required: true
         schema:
           example: 53240c09-79c3-4601-a625-10b4e0715a8d
           format: guid
-          type: string
-      - description: The id of the income line
-        in: path
-        name: month
-        required: true
-        schema:
-          example: 2024-12-01
-          format: date
           type: string
       requestBody:
         content:
@@ -129,9 +132,10 @@ paths:
         name: month
         required: true
         schema:
-          example: 2024-12-01
-          format: date
-          type: string
+          example: 0
+          maximum: 11
+          minimum: 0
+          type: integer
       requestBody:
         content:
           application/json:
@@ -153,11 +157,20 @@ paths:
       summary: Add a new expense line
       tags:
       - ledger
-  /month/{month}/expense_id:
+  /month/{month}/expense/{expenseId}:
     delete:
       description: Deletes an expense line from the ledger
       operationId: deleteExpense
       parameters:
+      - description: The id of the income line
+        in: path
+        name: month
+        required: true
+        schema:
+          example: 0
+          maximum: 11
+          minimum: 0
+          type: integer
       - description: The id of the expense line
         in: path
         name: expenseId
@@ -165,14 +178,6 @@ paths:
         schema:
           example: 53240c09-79c3-4601-a625-10b4e0715a8d
           format: guid
-          type: string
-      - description: The id of the income line
-        in: path
-        name: month
-        required: true
-        schema:
-          example: 2024-12-01
-          format: date
           type: string
       responses:
         "200":
@@ -192,6 +197,15 @@ paths:
       description: Updates an expense line in the ledger
       operationId: updateExpense
       parameters:
+      - description: The id of the income line
+        in: path
+        name: month
+        required: true
+        schema:
+          example: 0
+          maximum: 11
+          minimum: 0
+          type: integer
       - description: The id of the expense line
         in: path
         name: expenseId
@@ -199,14 +213,6 @@ paths:
         schema:
           example: 53240c09-79c3-4601-a625-10b4e0715a8d
           format: guid
-          type: string
-      - description: The id of the income line
-        in: path
-        name: month
-        required: true
-        schema:
-          example: 2024-12-01
-          format: date
           type: string
       requestBody:
         content:
@@ -237,9 +243,10 @@ components:
       name: month
       required: true
       schema:
-        example: 2024-12-01
-        format: date
-        type: string
+        example: 0
+        maximum: 11
+        minimum: 0
+        type: integer
     incomeId:
       description: The id of the income line
       in: path
@@ -314,6 +321,13 @@ components:
       - date
       - name
       - paid
+      type: object
+    ErrorResponse:
+      properties:
+        msg:
+          type: string
+      required:
+      - msg
       type: object
     IncomeResponse:
       example:
