# backend/internal/api/go/model_error_response.go
@@ -1,0 +1,38 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Ledger API
+ *
+ * This is the API for the ledger backend.
+ *
+ * API version: 0.0.1
+ */
+
+package openapi
+
+
+
+
+type ErrorResponse struct {
+
+	Msg string `json:"msg"`
+}
+
+// AssertErrorResponseRequired checks if the required fields are not zero-ed
+func AssertErrorResponseRequired(obj ErrorResponse) error {
+	elements := map[string]interface{}{
+		"msg": obj.Msg,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertErrorResponseConstraints checks if the values respects the defined constraints
+func AssertErrorResponseConstraints(obj ErrorResponse) error {
+	return nil
+}
